make gradlew executable

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -19,6 +19,9 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
+      - name: Make Gradlew Executable
+        run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
 
