--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### profiles #######
+/src/main/resources/application.properties
+/src/main/resources/application-local.properties
