--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
 spring.application.name=workingtrio
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel
-spring.datasource.username=root
-spring.datasource.password=Error@10
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=local
